--- a/capstone_final/Capstone/RVapp/templates/home.html
+++ b/capstone_final/Capstone/RVapp/templates/home.html
@@ -1,1 +1,19 @@
-<h1><em>RV Campground Search page. </em></h1>
+<h1> Home Page </h1>
+
+{% load static %}
+
+<h1 class="testing"> It works, again </h1>
+
+<!DOCTYPE html>
+<html>
+<head>
+<title> Campground Search </title>
+</head >
+<link href="{% static 'style.css' %}" rel="stylesheet" type="text/css">
+<div class="home-body-div">
+    <body class="home-body">
+    The content of the document......
+
+    </body>
+</div>
+</html> 
