--- a/capstone_final/Capstone/RVapp/templates/home.html
+++ b/capstone_final/Capstone/RVapp/templates/home.html
@@ -16,4 +16,18 @@
 
     </body>
 </div>
+<div class="home-redirect-btn">
+    <div>
+        <a href="{% url 'register' %}"><button> Register </button></a>
+    </div>
+    <div>
+        <a href="{% url 'home' %}"><button> Home </button></a>
+    </div>
+    <div>
+        <a href="{% url 'login' %}"><button> Login </button></a>
+    </div>
+    <div>
+        <a href="{% url 'profile' %}"><button> Profile </button></a>
+    </div>
+</div>
 </html> 
