--- a/capstone_final/Capstone/RVapp/static/style.css
+++ b/capstone_final/Capstone/RVapp/static/style.css
@@ -1,6 +1,13 @@
+.home-redirect-btn {
+    display: flex;
+    margin-left: 840px;
+    margin-top: 30px;
+    
+}
+
 .testing {
  font-size: 25px;
- background-color: blue;
+ background-color: rgb(24, 24, 51);
  color: white;
 }
 
@@ -14,4 +21,23 @@
     height: 500px;
     outline: 5px solid black;
     margin-left: 700px;
+}
+.profile {
+    font-size: 20px;
+    background-color: blueviolet;
+    display: flex;
+}
+.profile-body {
+    background-color:rgb(96, 96, 117)
+}
+.profile-enclosure {
+    margin: 20px;
+    border: 5px solid black;
+    border-radius: 5px;
+}
+.profile-email {
+    font-size: 18px;
+}
+.register-body {
+    background-color:rgb(96, 96, 117)
 }
