--- a/capstone_final/Capstone/RVapp/templates/login.html
+++ b/capstone_final/Capstone/RVapp/templates/login.html
@@ -1,1 +1,12 @@
 <h1> Login Page </h1>
+
+
+{% block content %}
+
+<h1> Login </h1>
+
+<form action="" method="POST">
+    {% csrf_token %}
+
+    <input type="submit" value="Submit" class="login-btn" >
+</form>
