--- a/capstone_final/Capstone/RVapp/templates/home.html
+++ b/capstone_final/Capstone/RVapp/templates/home.html
@@ -1,33 +1,146 @@
-<h1> Home Page </h1>
 
 {% load static %}
-
-<h1 class="testing"> It works, again </h1>
 
 <!DOCTYPE html>
 <html>
 <head>
-<title> Campground Search </title>
+<title> Search  </title>
 </head >
-<link href="{% static 'style.css' %}" rel="stylesheet" type="text/css">
+<link href="{% static "style.css" %}" rel="stylesheet" type="text/css">
+<script type="text/javascript"src="static/style.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div class='home-header'>
+    <h1 class="header"> Campground Search page  </h1>
+    <div class="headerbtn">
+        <div class="left-btn">
+            <a href="{% url 'register' %}"><button> Register </button></a>
+        
+            <a href="{% url 'home' %}"><button> Home </button></a>
+        </div>
+        
+        <div class="right-btn">
+            <a href="{% url 'login' %}"><button> Login </button></a>
+    
+            <a href="{% url 'profile' %}"><button> Profile </button></a>
+        </div>
+    </div>
+<div>
+   
+
 <div class="home-body-div">
     <body class="home-body">
-    The content of the document......
+        <div class="content-title">
+                <div class="destination"> Destination
+                    <form action="">
+                      <input type="text" placeholder="Search..." name="destination">
+                    </form>
+                </div>
+                <div class="checkin"> Check In
+                    <form action="">
+                        <input id="checkin" type="date" name="checkin">
+                        {{ timeform.my_date_field }}
+                    </form>
+                </div>
 
-    </body>
+                <div class="checkout"> Check Out
+                    <form action="">
+                      <input type="date"  name="checkout">
+                      {{ timeform.my_date_field }}
+                    </form>
+                </div>
+                <div class="search"> Search
+                    <form action=""> 
+                      <button class="button" type="submit" value="Search" name="button"> Submit </button> 
+                    </form>
+                </div>      
+              {% block content%}  
+        </div>
+
+        <div class="sort-block">
+            
+            <div class="sort-label">
+                <label > Sort: 
+                    <select class="form-control">
+                        <option value="asc"> ASC </option>
+                        <option value="dsc"> DSC </option>
+                    </select>
+                    <select>
+                        <option> Amenities: </option>
+                        {% for amenity in amenities %}
+                        <option value="{{ amenity }}"></option>
+                        {% endfor %}
+                    </select>
+                    <p class="cg-count"> 
+                        <h2> Total number of Campgounds {{ count }} </h2>
+                    </p>
+                </label>
+
+            </div>
+        </div>
+            
+        <div>
+            {% for list in page.object_list %}
+            <div class='c-enclosure'>
+                <div class="image-block">
+                    <p> <img src="{{ image.images.url}}" alt="Images"></p>
+                </div>
+
+                <div class="cname">
+                    <p> {{ list.campground_name  }} <a href='ncpage'> Link </a> </p> 
+                </div>
+                
+                <div class="cprice">
+                    <p>  Price: ${{ list.campground_price }} </p>
+                </div>
+                <div class="cdescription">
+                    <p> {{ list.description }} </p>
+                </div>
+                <div class="camenities">
+                    <p>  Amenities: {{ list.amenities }} </p>
+                </div>           
+                
+            </div>
+            {% endfor %}
+        </div>
+            
+
+         {% for list in amenities %}
+
+        <p class="amenities">  Amenities: {{ list.amenities }} </p>
+
+         {% endfor %}
+
+         {% for item in camp_images %}
+            <p> <img src="item.camp_images.url "></p>
+         {% endfor %}
+           
+            
+         {% endblock %}
+        <p>
+            <p class="page-number"> Page Number: {{ page.number }} </p>
+            <div class="page-links"> 
+                {% if page.has_previous %}
+                <a href="{% url 'home' %}?page={{ page.previous_page_number }}"> Previous Page </a>
+                {% endif %}
+
+                {% if page.has_next %}
+                <a href="{% url 'home' %}?page={{ page.next_page_number}}"> Next Page </a>
+                {% endif %}
+            </div>
+        </p>
+        <p class="more-content">  </p>
+    </body>    
 </div>
 <div class="home-redirect-btn">
-    <div>
-        <a href="{% url 'register' %}"><button> Register </button></a>
-    </div>
-    <div>
-        <a href="{% url 'home' %}"><button> Home </button></a>
-    </div>
-    <div>
-        <a href="{% url 'login' %}"><button> Login </button></a>
-    </div>
-    <div>
-        <a href="{% url 'profile' %}"><button> Profile </button></a>
-    </div>
+    <ul>
+        <li><a href="{% url 'register' %}"><button> Register </button></a></li>
+
+        <li><a href="{% url 'home' %}"><button> Home </button></a></li>
+
+        <li><a href="{% url 'login' %}"><button> Login </button></a></li>
+
+        <li><a href="{% url 'profile' %}"><button> Profile </button></a></li>
+    </ul>
 </div>
 </html> 
