--- a/capstone_final/Capstone/RVapp/templates/profile.html
+++ b/capstone_final/Capstone/RVapp/templates/profile.html
@@ -1,5 +1,7 @@
 <h1> Profile Page </h1>
+
 {% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,11 +11,13 @@
 
 <h1>This is a heading</h1>
 <p>This is a paragraph.</p>
-
-
+ 
 </body>
-</html> 
+</html>
+{% if user.is_authenticated %} 
+
 {% block content %}
+
 <div class="profile-enclosure">
     <div class="profile">
         <h1> Welcome, {{ user.username }}. </h1><br>
@@ -25,19 +29,20 @@
 </div>
 
 <div class="home-redirect-btn">
-     <div>
-        <a href="{% url 'register' %}"><button> Register </button></a>
-    </div>
-    <div>
-        <a href="{% url 'home' %}"><button> Home </button></a>
-    </div>
-    <div>
-        <a href="{% url 'login' %}"><button> Login </button></a>
-    </div>
-    <div>
-        <a href="{% url 'profile' %}"><button> Profile </button></a>
-    </div>
+    <ul>
+        <li><a href="{% url 'register' %}"><button> Register </button></a></li>
+
+        <li><a href="{% url 'home' %}"><button> Home </button></a></li>
+
+        <li><a href="{% url 'login' %}"><button> Login </button></a></li>
+
+        <li><a href="{% url 'profile' %}"><button> Profile </button></a></li>
+    </ul>
 </div>
 
     
 {% endblock content %}
+
+{% else %}
+<p> Login <a href="/login">Here</a></p>
+{% endif %}
