--- a/capstone_final/Capstone/RVapp/static/style.css
+++ b/capstone_final/Capstone/RVapp/static/style.css
@@ -2,25 +2,51 @@
     display: flex;
     margin-left: 840px;
     margin-top: 30px;
-    
+}
+.home-header { 
+    font-size: 20px;
+
+}
+.header {
+    margin-top: 5px;
+}
+.content-title {
+    border: 1px solid black;
+    height: 200px;
+    display: inline-flex;
+    margin-left: 150px;
 }
 
-.testing {
- font-size: 25px;
- background-color: rgb(24, 24, 51);
- color: white;
+.headerbtn {
+    margin-bottom: 20px;
+    border: 1px solid black;
+    font-size: 10px;
 }
 
+.left-btn {
+    display: inline;
+}
+.right-btn {
+    display: inline;
+}
 .home-body {
     font-size: 30px;
     text-align: center;
+    margin: 5px;
+}
+.content-title {
+    font-size: 20px;
+    color: black;
+    margin: 50px
 }
 
 .home-body-div {
-    width: 500px;
-    height: 500px;
     outline: 5px solid black;
-    margin-left: 700px;
+    margin-top: 30px;
+    background-color: rgb(53, 39, 39);
+    margin-bottom: 100px;
+
+
 }
 .profile {
     font-size: 20px;
@@ -28,7 +54,7 @@
     display: flex;
 }
 .profile-body {
-    background-color:rgb(96, 96, 117)
+    background-color:rgb(159, 159, 189)
 }
 .profile-enclosure {
     margin: 20px;
@@ -39,5 +65,120 @@
     font-size: 18px;
 }
 .register-body {
-    background-color:rgb(96, 96, 117)
+    background-color:rgb(145, 145, 167)
+}
+.c-enclosure {
+    display: inline-table;
+    margin-left: 10px;
+    margin-right: 10px;
+    color:black;
+    margin-top: 30px;
+    height: 400px;
+    background-color: rgb(236, 230, 222);
+    border: 1px solid;
+    padding: 10px;
+    box-shadow: 5px 10px 18px black;
+}
+.cname {
+    border: 1px solid black;
+    width: 500px;
+    text-align: left;
+    font-weight: bolder;
+    
+}
+.cprice {
+    border: 1px solid black;
+    width: 150px;
+}
+.cdescription {
+    border: 1px solid black;
+    margin-top: 75px;
+    height:200px;
+    text-align: left;
+}
+.camenities {
+    color: purple;
+}
+.button {
+    display: inline-block;
+    background-color: #7b38d8;
+    border-radius: 10px;
+    border: 4px double #cccccc;
+    color: #eeeeee;
+    text-align: center;
+    font-size: 18px;
+    padding: 15px;
+    width: 125px;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+  }
+.checkin {
+    font-size: 25px;
+}
+.destination {
+    font-size: 25px;
+}
+.checkout {
+    font-size: 25px;
+}
+.checked {
+    color: rgb(70, 62, 49);
+  }
+.review-main {
+    font-size: 18px;
+
+}
+.cg-count {
+    color: black;
+    font-size: 10px;
+    text-align: center;
+}
+.amenities {
+    color: black;
+}
+.more-content {
+    color: black;
+}
+.page-links {
+    text-align: center;
+}
+.page-number {
+    color:black;
+    font-size: 15px;
+}
+ul {
+    list-style-type: none;
+    position: fixed;
+    bottom: 20px;
+    width: 100%;
+ }
+ li {
+    float: left;
+       border-right: 1px solid white;
+ }
+ li a {
+    display: block;
+    padding: 8px;
+    background-color: orange;
+ }
+ li:last-child {
+    border-right: none;
+ }
+.image-block {
+    border: 1px solid black;
+    float: right;
+    height: 200px;
+    width: 300px;
+}
+.sort-block {
+    background-color: aqua;
+    display: inline;
+}
+.sort-label {
+    color: black;
+    font-size: 30px;
 }
