--- a/capstone_final/Capstone/RVapp/templates/campground.html
+++ b/capstone_final/Capstone/RVapp/templates/campground.html
@@ -1,1 +1,13 @@
 <h1> Campground Page </h1>
+
+<div class="home-redirect-btn">
+    <ul>
+        <li><a href="{% url 'register' %}"><button> Register </button></a></li>
+
+        <li><a href="{% url 'home' %}"><button> Home </button></a></li>
+
+        <li><a href="{% url 'login' %}"><button> Login </button></a></li>
+
+        <li><a href="{% url 'profile' %}"><button> Profile </button></a></li>
+    </ul>
+</div>
