--- a/capstone_final/Capstone/Users/templates/registration/login.html
+++ b/capstone_final/Capstone/Users/templates/registration/login.html
@@ -1,3 +1,9 @@
+<h1> Login Page from Users </h1>
+
+{% block title %}
+
+Login in Here
+{% endblock %}
 
 {% block content %}
 
@@ -5,14 +11,21 @@
 
 <form action="" method="POST">
     {% csrf_token %}
-    <label for="inputusername" class="form-label"> Username: </label>
+    <label for="username" class="form-label"> Username: </label>
     <input type="text" class="form-control" name="username">
     
-    <label for="inputpassword1" class="form-label"> Password: </label>
+    <label for="password" class="form-label"> Password: </label>
     <input type="text" class="form-control" name="password">
+
+    <p> Don't have an account? Create one <a href="/register"> here </a></p>
     
-
     <input type="submit" value="Submit" class="login-btn" >
+    
 </form>
-
 {% endblock %}
+
+<div class="home-redirect-btn">
+   <div>
+       <a href="{% url 'home' %}"><button> Home </button></a>
+   </div>
+</div>
