--- a/capstone_final/Capstone/RVapp/templates/ncpage1.html
+++ b/capstone_final/Capstone/RVapp/templates/ncpage1.html
@@ -1,18 +1,20 @@
-<h1> NC Page 1 </h1>
+
+<!DOCTYPE html>
 
 {% load static %}
-<h1>
-Merchant Processing the page.  <br>
 
-Please Do not refresh this page.
-
-</h1>
-<!DOCTYPE html>
 <html>
+
 <head>
-    <link href="{% static "style.css" %}" rel="stylesheet" type="text/css">
-    <script type="text/javascript"src="static/style.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link href="{% static "style.css" %}" rel="stylesheet" type="text/css"/>
+    <script type="text/javascript" src="static/style.js"></script>
+       
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+
+    <h1 class="ncpage1-heading">Merchant Processing the page.  <br>
+        Please Do not refresh this page.
+    </h1>
     
 </head>
 
@@ -20,13 +22,9 @@ Please Do not refresh this page.
     
     <div class="home-redirect-btn">
         <ul>
-            <li><a href="{% url 'register' %}"><button> Register </button></a></li>
 
-            <li><a href="{% url 'home' %}"><button> Home </button></a></li>
+            <a href="{% url 'home' %}"><button class="ncpage1-btn"> Home </button></a>
 
-            <li><a href="{% url 'login' %}"><button> Login </button></a></li>
-
-            <li><a href="{% url 'profile' %}"><button> Profile </button></a></li>
         </ul>
     </div>
 
