--- a/capstone_final/Capstone/Users/templates/registration/login.html
+++ b/capstone_final/Capstone/Users/templates/registration/login.html
@@ -1,31 +1,42 @@
-<h1> Login Page from Users </h1>
+<!DOCTYPE html>
 
-{% block title %}
+{% load static %}
 
-Login in Here
-{% endblock %}
+<html>
 
-{% block content %}
+    <head>
+        <title> Login </title>
+        
+        <link href="{% static "style.css" %}" rel="stylesheet" type="text/css"/>
+        <script type="text/javascript" src="static/style.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    </head>
 
-<h1> Login </h1>
+    <body>
+        <div class="login-main">
+            <h1> Login Here: </h1>
+                {% block content %}
+            <form action="" method="POST">
+                {% csrf_token %}
+                <label for="username" class="form-label"> Username: </label>
+                <input type="text" class="form-control" name="username">
+                
+                <label for="password" class="form-label"> Password: </label>
+                <input type="password" class="form-control" name="password">
 
-<form action="" method="POST">
-    {% csrf_token %}
-    <label for="username" class="form-label"> Username: </label>
-    <input type="text" class="form-control" name="username">
-    
-    <label for="password" class="form-label"> Password: </label>
-    <input type="text" class="form-control" name="password">
+                <p> Don't have an account? Create one <a href="/register"> here </a></p>
+                
+                <input type="submit" value="Submit" class="login-btn" >
+            </form>
+                {% endblock %}
 
-    <p> Don't have an account? Create one <a href="/register"> here </a></p>
-    
-    <input type="submit" value="Submit" class="login-btn" >
-    
-</form>
-{% endblock %}
+            <div class="home-redirect-btn">
+            <div>
+                <a href="{% url 'home' %}"><button> Home </button></a>
+            </div>
+            </div>
+        </div>
 
-<div class="home-redirect-btn">
-   <div>
-       <a href="{% url 'home' %}"><button> Home </button></a>
-   </div>
-</div>
+    </body>
+
+</html> 
