--- a/capstone_final/Capstone/Users/templates/registration/logout.html
+++ b/capstone_final/Capstone/Users/templates/registration/logout.html
@@ -1,10 +1,20 @@
 <h1> Logout Page from Users </h1>
 
+<!DOCTYPE html>
+<html>
+<head>
+<title> Logout </title>
+</head>
 
-{% block content %}
-
-    <h1> You have been logged out </h1>
-    
-    <h3> Login in again <a href="/login"> Here </a> </h3>
-
+<body>
+    {% block content %}
+    <div class="logout-main">
+        <h1> You have been logged out </h1>
+        
+        <h3> Login in again <a href="/login"> Here </a> </h3>
+    </div>
 {% endblock %}
+
+</body>
+
+</html> 
